# CenTuri-Course

./: .gitignore  0-Introduction.ipynb  1-Variables.ipynb  2-Data-Structures.ipynb  3-Conditional-Statements-Loops.ipynb  4-Some-Exercises.ipynb  5-0-Introduction-function.ipynb  5-1-File-manipulation.ipynb  6-1-From-0D-to-1D.ipynb  6-2-Adding-lateral-diffusion.ipynb  7-From-1D-to-2D.ipynb  8-Playing-with-the-model.ipynb  Configuration-test.py  Everything-in-one.ipynb  LICENSE  README.md  Roadmap.md  Turing-course.ipynb  pyproject.toml  setup.cfg  test-notebook.ipynb
1-Introduction-to-Python/: 0-Introduction.ipynb  0-Introduction.test.md  1-Variables.ipynb  2-Data-Structures.ipynb  3-Conditional-Statements-Loops.ipynb  4-Some-Exercises.ipynb  5-0-Introduction-function.ipynb  5-1-File-manipulation.ipynb  6-1-From-0D-to-1D.ipynb  6-2-Adding-lateral-diffusion.ipynb  7-From-1D-to-2D.ipynb  8-Playing-with-the-model.ipynb  Everything-in-one.ipynb  README.md
2-Data-handling-and-visu/: 01-02-Intro-and-Line-plots.ipynb  03-04-Figures-and-Subplots.ipynb  05-06-Styles-and-Aesthetics.ipynb  07-08-Saving-and-Color-maps.ipynb  09-Histograms.ipynb  10-11-Boxplots-Violinplots-and-Scatter-plots.ipynb  12-Animations.ipynb  13-Seaborn.ipynb  2-all-in-one.ipynb  9-Histograms.ipynb  Matplotlib-course.ipynb  README.md  Untitled.ipynb
3-Classes/: Introduction-to-classes.ipynb
Data-handling-and-visu/: README.md
Introduction-to-Python/: 1-Variables.ipynb  5-0-Introduction-function.ipynb  8-Playing-with-the-model.ipynb
Resources/: Answers.py  UsefulFunctions.py
(+33 files in other folders)
