[metadata]
name = centuri-course
version = 2024.1.1
description = Some tools to follow the introduction course to Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuignardLab/Centuri-Course/
author = Leo Guignard
author_email = leo.guignard@univ-amu.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education
project_urls =
    Bug Tracker = https://github.com/GuignardLab/Centuri-Course/issues
    Documentation = https://guignardlab.github.io/CenTuri-Course/

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    seaborn
    jupyter
    notebook
    ipython

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
* = *.yaml
